--- a/chem_lib/elements.yaml
+++ b/chem_lib/elements.yaml
@@ -2,7 +2,7 @@
 "H":
     name: Hydrogen
     protons: 1
-    weight: 1.008
+    mass: 1.008
     charges: [ 1 ] 
     group_number: 1
     period_number: 1
@@ -12,7 +12,7 @@
 "He":
     name: Helium
     protons: 2
-    weight: 4.002602
+    mass: 4.002602
     charges: [ 0 ] 
     group_number: 18
     period_number: 1
@@ -22,7 +22,7 @@
 "Li":
     name: Lithium
     protons: 3
-    weight: 6.94
+    mass: 6.94
     charges: [ 1 ] 
     group_number: 1
     period_number: 2
@@ -32,7 +32,7 @@
 "Be":
     name: Beryllium
     protons: 4
-    weight: 9.0121831
+    mass: 9.0121831
     charges: [ 2 ] 
     group_number: 2
     period_number: 2
@@ -42,7 +42,7 @@
 "B":
     name: Boron
     protons: 5
-    weight: 10.81
+    mass: 10.81
     charges: [ -3 ,  3 ] 
     group_number: 13
     period_number: 2
@@ -52,7 +52,7 @@
 "C":
     name: Carbon
     protons: 6
-    weight: 12.011
+    mass: 12.011
     charges: [ 4 ] 
     group_number: 14
     period_number: 2
@@ -62,7 +62,7 @@
 "N":
     name: Nitrogen
     protons: 7
-    weight: 14.007
+    mass: 14.007
     charges: [ -3 ] 
     group_number: 15
     period_number: 2
@@ -72,7 +72,7 @@
 "O":
     name: Oxygen
     protons: 8
-    weight: 15.999
+    mass: 15.999
     charges: [ -2 ] 
     group_number: 16
     period_number: 2
@@ -82,7 +82,7 @@
 "F":
     name: Fluorine
     protons: 9
-    weight: 18.998403163
+    mass: 18.998403163
     charges: [ -1 ] 
     group_number: 17
     period_number: 2
@@ -92,7 +92,7 @@
 "Ne":
     name: Neon
     protons: 10
-    weight: 20.1797
+    mass: 20.1797
     charges: [ 0 ] 
     group_number: 18
     period_number: 2
@@ -102,7 +102,7 @@
 "Na":
     name: Sodium
     protons: 11
-    weight: 22.98976928
+    mass: 22.98976928
     charges: [ 1 ] 
     group_number: 1
     period_number: 3
@@ -112,7 +112,7 @@
 "Mg":
     name: Magnesium
     protons: 12
-    weight: 24.305
+    mass: 24.305
     charges: [ 2 ] 
     group_number: 2
     period_number: 3
@@ -122,7 +122,7 @@
 "Al":
     name: Aluminum
     protons: 13
-    weight: 26.9815384
+    mass: 26.9815384
     charges: [ 3 ] 
     group_number: 13
     period_number: 3
@@ -132,7 +132,7 @@
 "Si":
     name: Silicon
     protons: 14
-    weight: 28.085
+    mass: 28.085
     charges: [ 4 ,  -4 ] 
     group_number: 14
     period_number: 3
@@ -142,7 +142,7 @@
 "P":
     name: Phosphorus
     protons: 15
-    weight: 30.973761998
+    mass: 30.973761998
     charges: [ 5 ,  3 ,  -3 ] 
     group_number: 15
     period_number: 3
@@ -152,7 +152,7 @@
 "S":
     name: Sulfur
     protons: 16
-    weight: 32.06
+    mass: 32.06
     charges: [ -2 ,  2 ,  4 ,  6 ] 
     group_number: 16
     period_number: 3
@@ -162,7 +162,7 @@
 "Cl":
     name: Chlorine
     protons: 17
-    weight: 35.45
+    mass: 35.45
     charges: [ -1 ] 
     group_number: 17
     period_number: 3
@@ -172,7 +172,7 @@
 "Ar":
     name: Argon
     protons: 18
-    weight: 39.948
+    mass: 39.948
     charges: [ 0 ] 
     group_number: 18
     period_number: 3
@@ -182,7 +182,7 @@
 "K":
     name: Potassium
     protons: 19
-    weight: 39.0983
+    mass: 39.0983
     charges: [ 1 ] 
     group_number: 1
     period_number: 4
@@ -192,7 +192,7 @@
 "Ca":
     name: Calcium
     protons: 20
-    weight: 40.078
+    mass: 40.078
     charges: [ 2 ] 
     group_number: 2
     period_number: 4
@@ -202,7 +202,7 @@
 "Sc":
     name: Scandium
     protons: 21
-    weight: 44.955908
+    mass: 44.955908
     charges: [ 3 ] 
     group_number: 3
     period_number: 4
@@ -212,7 +212,7 @@
 "Ti":
     name: Titanium
     protons: 22
-    weight: 47.867
+    mass: 47.867
     charges: [ 4 ,  3 ] 
     group_number: 4
     period_number: 4
@@ -222,7 +222,7 @@
 "V":
     name: Vanadium
     protons: 23
-    weight: 50.9415
+    mass: 50.9415
     charges: [ 2 ,  3 ,  4 ,  5 ] 
     group_number: 5
     period_number: 4
@@ -232,7 +232,7 @@
 "Cr":
     name: Chromium
     protons: 24
-    weight: 51.9961
+    mass: 51.9961
     charges: [ 2 ,  3 ,  6 ] 
     group_number: 6
     period_number: 4
@@ -242,7 +242,7 @@
 "Mn":
     name: Manganese
     protons: 25
-    weight: 54.938043
+    mass: 54.938043
     charges: [ 2 ,  4 ,  7 ] 
     group_number: 7
     period_number: 4
@@ -252,7 +252,7 @@
 "Fe":
     name: Iron
     protons: 26
-    weight: 55.845
+    mass: 55.845
     charges: [ 2 ,  3 ] 
     group_number: 8
     period_number: 4
@@ -262,7 +262,7 @@
 "Co":
     name: Cobalt
     protons: 27
-    weight: 58.933194
+    mass: 58.933194
     charges: [ 2 ,  3 ] 
     group_number: 9
     period_number: 4
@@ -272,7 +272,7 @@
 "Ni":
     name: Nickel
     protons: 28
-    weight: 58.6934
+    mass: 58.6934
     charges: [ 2 ] 
     group_number: 10
     period_number: 4
@@ -282,7 +282,7 @@
 "Cu":
     name: Copper
     protons: 29
-    weight: 63.546
+    mass: 63.546
     charges: [ 1 ,  2 ] 
     group_number: 11
     period_number: 4
@@ -292,7 +292,7 @@
 "Zn":
     name: Zinc
     protons: 30
-    weight: 65.38
+    mass: 65.38
     charges: [ 2 ] 
     group_number: 12
     period_number: 4
@@ -302,7 +302,7 @@
 "Ga":
     name: Gallium
     protons: 31
-    weight: 69.723
+    mass: 69.723
     charges: [ 3 ] 
     group_number: 13
     period_number: 4
@@ -312,7 +312,7 @@
 "Ge":
     name: Germanium
     protons: 32
-    weight: 72.630
+    mass: 72.630
     charges: [ -4 ,  2 ,  4 ] 
     group_number: 14
     period_number: 4
@@ -322,7 +322,7 @@
 "As":
     name: Arsenic
     protons: 33
-    weight: 74.921595
+    mass: 74.921595
     charges: [ -3 ,  3 ,  5 ] 
     group_number: 15
     period_number: 4
@@ -332,7 +332,7 @@
 "Se":
     name: Selenium
     protons: 34
-    weight: 78.971
+    mass: 78.971
     charges: [ -2 ,  4 ,  6 ] 
     group_number: 16
     period_number: 4
@@ -342,7 +342,7 @@
 "Br":
     name: Bromine
     protons: 35
-    weight: 79.904
+    mass: 79.904
     charges: [ -1 ,  1 ,  5 ] 
     group_number: 17
     period_number: 4
@@ -352,7 +352,7 @@
 "Kr":
     name: Krypton
     protons: 36
-    weight: 83.798
+    mass: 83.798
     charges: [ 0 ] 
     group_number: 18
     period_number: 4
@@ -362,7 +362,7 @@
 "Rb":
     name: Rubidium
     protons: 37
-    weight: 85.4678
+    mass: 85.4678
     charges: [ 1 ] 
     group_number: 1
     period_number: 5
@@ -372,7 +372,7 @@
 "Sr":
     name: Strontium
     protons: 38
-    weight: 87.62
+    mass: 87.62
     charges: [ 2 ] 
     group_number: 2
     period_number: 5
@@ -382,7 +382,7 @@
 "Y":
     name: Yttrium
     protons: 39
-    weight: 88.90584
+    mass: 88.90584
     charges: [ 3 ] 
     group_number: 3
     period_number: 5
@@ -392,7 +392,7 @@
 "Zr":
     name: Zirconium
     protons: 40
-    weight: 91.224
+    mass: 91.224
     charges: [ 4 ] 
     group_number: 4
     period_number: 5
@@ -402,7 +402,7 @@
 "Nb":
     name: Niobium
     protons: 41
-    weight: 92.90637
+    mass: 92.90637
     charges: [ 3 ,  5 ] 
     group_number: 5
     period_number: 5
@@ -412,7 +412,7 @@
 "Mo":
     name: Molybdenum
     protons: 42
-    weight: 95.95
+    mass: 95.95
     charges: [ 3 ,  6 ] 
     group_number: 6
     period_number: 5
@@ -422,7 +422,7 @@
 "Tc":
     name: Technetium
     protons: 43
-    weight: null
+    mass: null
     charges: [ 6 ] 
     group_number: 7
     period_number: 5
@@ -432,7 +432,7 @@
 "Ru":
     name: Ruthenium
     protons: 44
-    weight: 101.07
+    mass: 101.07
     charges: [ 3 ,  4 ,  8 ] 
     group_number: 8
     period_number: 5
@@ -442,7 +442,7 @@
 "Rh":
     name: Rhodium
     protons: 45
-    weight: 102.90549
+    mass: 102.90549
     charges: [ 4 ] 
     group_number: 9
     period_number: 5
@@ -452,7 +452,7 @@
 "Pd":
     name: Palladium
     protons: 46
-    weight: 106.42
+    mass: 106.42
     charges: [ 2 ,  4 ] 
     group_number: 10
     period_number: 5
@@ -462,7 +462,7 @@
 "Ag":
     name: Silver
     protons: 47
-    weight: 107.8682
+    mass: 107.8682
     charges: [ 1 ] 
     group_number: 11
     period_number: 5
@@ -472,7 +472,7 @@
 "Cd":
     name: Cadmium
     protons: 48
-    weight: 112.414
+    mass: 112.414
     charges: [ 2 ] 
     group_number: 12
     period_number: 5
@@ -482,7 +482,7 @@
 "In":
     name: Indium
     protons: 49
-    weight: 114.818
+    mass: 114.818
     charges: [ 3 ] 
     group_number: 13
     period_number: 5
@@ -492,7 +492,7 @@
 "Sn":
     name: Tin
     protons: 50
-    weight: 118.710
+    mass: 118.710
     charges: [ 2 ,  4 ] 
     group_number: 14
     period_number: 5
@@ -502,7 +502,7 @@
 "Sb":
     name: Antimony
     protons: 51
-    weight: 121.760
+    mass: 121.760
     charges: [ -3 ,  3 ,  5 ] 
     group_number: 15
     period_number: 5
@@ -512,7 +512,7 @@
 "Te":
     name: Tellurium
     protons: 52
-    weight: 127.60
+    mass: 127.60
     charges: [ -2 ,  4 ,  6 ] 
     group_number: 16
     period_number: 5
@@ -522,7 +522,7 @@
 "I":
     name: Iodine
     protons: 53
-    weight: 126.90447
+    mass: 126.90447
     charges: [ -1 ] 
     group_number: 17
     period_number: 5
@@ -532,7 +532,7 @@
 "Xe":
     name: Xenon
     protons: 54
-    weight: 131.293
+    mass: 131.293
     charges: [ 0 ] 
     group_number: 18
     period_number: 5
@@ -542,7 +542,7 @@
 "Cs":
     name: Cesium
     protons: 55
-    weight: 132.90545196
+    mass: 132.90545196
     charges: [ 1 ] 
     group_number: 1
     period_number: 6
@@ -552,7 +552,7 @@
 "Ba":
     name: Barium
     protons: 56
-    weight: 137.327
+    mass: 137.327
     charges: [ 2 ] 
     group_number: 2
     period_number: 6
@@ -562,7 +562,7 @@
 "La":
     name: Lanthanum
     protons: 57
-    weight: 138.90547
+    mass: 138.90547
     charges: [ 3 ] 
     group_number: 3
     period_number: 6
@@ -572,7 +572,7 @@
 "Ce":
     name: Cerium
     protons: 58
-    weight: 140.116
+    mass: 140.116
     charges: [ 3 ,  4 ] 
     group_number: 101
     period_number: 6
@@ -582,7 +582,7 @@
 "Pr":
     name: Praseodymium
     protons: 59
-    weight: 140.90766
+    mass: 140.90766
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -592,7 +592,7 @@
 "Nd":
     name: Neodymium
     protons: 60
-    weight: 144.242
+    mass: 144.242
     charges: [ 3 ,  4 ] 
     group_number: 101
     period_number: 6
@@ -602,7 +602,7 @@
 "Pm":
     name: Promethium
     protons: 61
-    weight: null
+    mass: null
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -612,7 +612,7 @@
 "Sm":
     name: Samarium
     protons: 62
-    weight: 150.36
+    mass: 150.36
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -622,7 +622,7 @@
 "Eu":
     name: Europium
     protons: 63
-    weight: 151.964
+    mass: 151.964
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -632,7 +632,7 @@
 "Gd":
     name: Gadolinium
     protons: 64
-    weight: 157.25
+    mass: 157.25
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -642,7 +642,7 @@
 "Tb":
     name: Terbium
     protons: 65
-    weight: 158.925354
+    mass: 158.925354
     charges: [ 3 ,  4 ] 
     group_number: 101
     period_number: 6
@@ -652,7 +652,7 @@
 "Dy":
     name: Dysprosium
     protons: 66
-    weight: 162.500
+    mass: 162.500
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -662,7 +662,7 @@
 "Ho":
     name: Holmium
     protons: 67
-    weight: 164.930328
+    mass: 164.930328
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -672,7 +672,7 @@
 "Er":
     name: Erbium
     protons: 68
-    weight: 167.259
+    mass: 167.259
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -682,7 +682,7 @@
 "Tm":
     name: Thulium
     protons: 69
-    weight: 168.934218
+    mass: 168.934218
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -692,7 +692,7 @@
 "Yb":
     name: Ytterbium
     protons: 70
-    weight: 173.045
+    mass: 173.045
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -702,7 +702,7 @@
 "Lu":
     name: Lutetium
     protons: 71
-    weight: 174.9668
+    mass: 174.9668
     charges: [ 3 ] 
     group_number: 101
     period_number: 6
@@ -712,7 +712,7 @@
 "Hf":
     name: Hafnium
     protons: 72
-    weight: 178.49
+    mass: 178.49
     charges: [ 4 ] 
     group_number: 4
     period_number: 6
@@ -722,7 +722,7 @@
 "Ta":
     name: Tantalum
     protons: 73
-    weight: 180.94788
+    mass: 180.94788
     charges: [ 5 ] 
     group_number: 5
     period_number: 6
@@ -732,7 +732,7 @@
 "W":
     name: Tungsten
     protons: 74
-    weight: 183.84
+    mass: 183.84
     charges: [ 6 ] 
     group_number: 6
     period_number: 6
@@ -742,7 +742,7 @@
 "Re":
     name: Rhenium
     protons: 75
-    weight: 186.207
+    mass: 186.207
     charges: [ 2 ,  4 ,  6 ,  7 ] 
     group_number: 7
     period_number: 6
@@ -752,7 +752,7 @@
 "Os":
     name: Osmium
     protons: 76
-    weight: 190.23
+    mass: 190.23
     charges: [ 3 ,  4 ,  6 ,  8 ] 
     group_number: 8
     period_number: 6
@@ -762,7 +762,7 @@
 "Ir":
     name: Iridium
     protons: 77
-    weight: 192.217
+    mass: 192.217
     charges: [ 3 ,  4 ,  6 ] 
     group_number: 9
     period_number: 6
@@ -772,7 +772,7 @@
 "Pt":
     name: Platinum
     protons: 78
-    weight: 195.084
+    mass: 195.084
     charges: [ 2 ,  4 ,  6 ] 
     group_number: 10
     period_number: 6
@@ -782,7 +782,7 @@
 "Au":
     name: Gold
     protons: 79
-    weight: 196.966570
+    mass: 196.966570
     charges: [ 1 ,  2 ,  3 ] 
     group_number: 11
     period_number: 6
@@ -792,7 +792,7 @@
 "Hg":
     name: Mercury
     protons: 80
-    weight: 200.592
+    mass: 200.592
     charges: [ 1 ,  2 ] 
     group_number: 12
     period_number: 6
@@ -802,7 +802,7 @@
 "Tl":
     name: Thallium
     protons: 81
-    weight: 204.38
+    mass: 204.38
     charges: [ 1 ,  3 ] 
     group_number: 13
     period_number: 6
@@ -812,7 +812,7 @@
 "Pb":
     name: Lead
     protons: 82
-    weight: 207.2
+    mass: 207.2
     charges: [ 2 ,  4 ] 
     group_number: 14
     period_number: 6
@@ -822,7 +822,7 @@
 "Bi":
     name: Bismuth
     protons: 83
-    weight: 208.98040
+    mass: 208.98040
     charges: [ 3 ] 
     group_number: 15
     period_number: 6
@@ -832,7 +832,7 @@
 "Po":
     name: Polonium
     protons: 84
-    weight: null
+    mass: null
     charges: [ 2 ,  4 ] 
     group_number: 16
     period_number: 6
@@ -842,7 +842,7 @@
 "At":
     name: Astatine
     protons: 85
-    weight: null
+    mass: null
     charges: null 
     group_number: 17
     period_number: 6
@@ -852,7 +852,7 @@
 "Rn":
     name: Radon
     protons: 86
-    weight: null
+    mass: null
     charges: [ 0 ] 
     group_number: 18
     period_number: 6
@@ -862,7 +862,7 @@
 "Fr":
     name: Francium
     protons: 87
-    weight: null
+    mass: null
     charges: null 
     group_number: 1
     period_number: 7
@@ -872,7 +872,7 @@
 "Ra":
     name: Radium
     protons: 88
-    weight: null
+    mass: null
     charges: [ 2 ] 
     group_number: 2
     period_number: 7
@@ -882,7 +882,7 @@
 "Ac":
     name: Actinium
     protons: 89
-    weight: null
+    mass: null
     charges: [ 3 ] 
     group_number: 3
     period_number: 7
@@ -892,7 +892,7 @@
 "Th":
     name: Thorium
     protons: 90
-    weight: 232.0377
+    mass: 232.0377
     charges: [ 4 ] 
     group_number: 102
     period_number: 7
@@ -902,7 +902,7 @@
 "Pa":
     name: Protactinium
     protons: 91
-    weight: 231.03588
+    mass: 231.03588
     charges: [ 5 ] 
     group_number: 102
     period_number: 7
@@ -912,7 +912,7 @@
 "U":
     name: Uranium
     protons: 92
-    weight: 238.02891
+    mass: 238.02891
     charges: [ 3 ,  4 ,  6 ] 
     group_number: 102
     period_number: 7
@@ -922,7 +922,7 @@
 "Np":
     name: Neptunium
     protons: 93
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -932,7 +932,7 @@
 "Pu":
     name: Plutonium
     protons: 94
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -942,7 +942,7 @@
 "Am":
     name: Americium
     protons: 95
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -952,7 +952,7 @@
 "Cm":
     name: Curium
     protons: 96
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -962,7 +962,7 @@
 "Bk":
     name: Berkelium
     protons: 97
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -972,7 +972,7 @@
 "Cf":
     name: Californium
     protons: 98
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -982,7 +982,7 @@
 "Es":
     name: Einsteinium
     protons: 99
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -992,7 +992,7 @@
 "Fm":
     name: Fermium
     protons: 100
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -1002,7 +1002,7 @@
 "Md":
     name: Mendelevium
     protons: 101
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -1012,7 +1012,7 @@
 "No":
     name: Nobelium
     protons: 102
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -1022,7 +1022,7 @@
 "Lr":
     name: Lawrencium
     protons: 103
-    weight: null
+    mass: null
     charges: null 
     group_number: 102
     period_number: 7
@@ -1032,7 +1032,7 @@
 "Rf":
     name: Rutherfordium
     protons: 104
-    weight: null
+    mass: null
     charges: null 
     group_number: 4
     period_number: 7
@@ -1042,7 +1042,7 @@
 "Db":
     name: Dubnium
     protons: 105
-    weight: null
+    mass: null
     charges: null 
     group_number: 5
     period_number: 7
@@ -1052,7 +1052,7 @@
 "Sg":
     name: Seaborgium
     protons: 106
-    weight: null
+    mass: null
     charges: null 
     group_number: 6
     period_number: 7
@@ -1062,7 +1062,7 @@
 "Bh":
     name: Bohrium
     protons: 107
-    weight: null
+    mass: null
     charges: null 
     group_number: 7
     period_number: 7
@@ -1072,7 +1072,7 @@
 "Hs":
     name: Hassium
     protons: 108
-    weight: null
+    mass: null
     charges: null 
     group_number: 8
     period_number: 7
@@ -1082,7 +1082,7 @@
 "Mt":
     name: Meitnerium
     protons: 109
-    weight: null
+    mass: null
     charges: null 
     group_number: 9
     period_number: 7
