--- a/chem_lib/elements.yaml
+++ b/chem_lib/elements.yaml
@@ -2,6 +2,7 @@
 "H":
     name: Hydrogen
     protons: 1
+    valence_shells: [ 1s1 ]
     mass: 1.008
     charges: [ 1 ] 
     group_number: 1
@@ -12,6 +13,7 @@
 "He":
     name: Helium
     protons: 2
+    valence_shells: [ 1s2 ]
     mass: 4.002602
     charges: [ 0 ] 
     group_number: 18
@@ -22,6 +24,7 @@
 "Li":
     name: Lithium
     protons: 3
+    valence_shells: [ 2s1 ]
     mass: 6.94
     charges: [ 1 ] 
     group_number: 1
@@ -32,6 +35,7 @@
 "Be":
     name: Beryllium
     protons: 4
+    valence_shells: [ 2s2 ]
     mass: 9.0121831
     charges: [ 2 ] 
     group_number: 2
@@ -42,6 +46,7 @@
 "B":
     name: Boron
     protons: 5
+    valence_shells: [ 2s2, 2p1 ]
     mass: 10.81
     charges: [ -3 ,  3 ] 
     group_number: 13
@@ -52,6 +57,7 @@
 "C":
     name: Carbon
     protons: 6
+    valence_shells: [ 2s2, 2p2 ]
     mass: 12.011
     charges: [ 4 ] 
     group_number: 14
@@ -59,9 +65,11 @@
     electron_configuration: "[He] 2s2 2p2"
     density: 2.267
     classification: non_metal
+    ionization_energy: 1086.454 # kj mol^-1
 "N":
     name: Nitrogen
     protons: 7
+    valence_shells: [ 2s2, 2p3 ]
     mass: 14.007
     charges: [ -3 ] 
     group_number: 15
@@ -69,9 +77,11 @@
     electron_configuration: "[He] 2s2 2p3"
     density: 0.0012506
     classification: non_metal
+    ionization_energy: 1402.328
 "O":
     name: Oxygen
     protons: 8
+    valence_shells: [ 2s2, 2p4 ]
     mass: 15.999
     charges: [ -2 ] 
     group_number: 16
@@ -79,9 +89,11 @@
     electron_configuration: "[He] 2s2 2p4"
     density: 0.001429
     classification: non_metal
+    ionization_energy: 1313.942
 "F":
     name: Fluorine
     protons: 9
+    valence_shells: [ 2s2, 2p5 ]
     mass: 18.998403163
     charges: [ -1 ] 
     group_number: 17
@@ -89,9 +101,11 @@
     electron_configuration: "[He] 2s2 2p5"
     density: 0.001696
     classification: non_metal
+    ionization_energy: 1681.045
 "Ne":
     name: Neon
     protons: 10
+    valence_shells: [ 2s2, 2p6 ]
     mass: 20.1797
     charges: [ 0 ] 
     group_number: 18
@@ -102,6 +116,7 @@
 "Na":
     name: Sodium
     protons: 11
+    valence_shells: [ 3s1 ]
     mass: 22.98976928
     charges: [ 1 ] 
     group_number: 1
@@ -112,6 +127,7 @@
 "Mg":
     name: Magnesium
     protons: 12
+    valence_shells: [ 3s2 ]
     mass: 24.305
     charges: [ 2 ] 
     group_number: 2
@@ -122,6 +138,7 @@
 "Al":
     name: Aluminum
     protons: 13
+    valence_shells: [ 3s2, 3p1 ]
     mass: 26.9815384
     charges: [ 3 ] 
     group_number: 13
@@ -132,6 +149,7 @@
 "Si":
     name: Silicon
     protons: 14
+    valence_shells: [ 3s2, 3p2 ]
     mass: 28.085
     charges: [ 4 ,  -4 ] 
     group_number: 14
@@ -142,6 +160,7 @@
 "P":
     name: Phosphorus
     protons: 15
+    valence_shells: [ 3s2, 3p3 ]
     mass: 30.973761998
     charges: [ 5 ,  3 ,  -3 ] 
     group_number: 15
@@ -152,6 +171,7 @@
 "S":
     name: Sulfur
     protons: 16
+    valence_shells: [ 3s2, 3p4 ]
     mass: 32.06
     charges: [ -2 ,  2 ,  4 ,  6 ] 
     group_number: 16
@@ -162,6 +182,7 @@
 "Cl":
     name: Chlorine
     protons: 17
+    valence_shells: [ 3s2, 3p5 ]
     mass: 35.45
     charges: [ -1 ] 
     group_number: 17
@@ -172,6 +193,7 @@
 "Ar":
     name: Argon
     protons: 18
+    valence_shells: [ 3s2, 3p6 ]
     mass: 39.948
     charges: [ 0 ] 
     group_number: 18
@@ -182,6 +204,7 @@
 "K":
     name: Potassium
     protons: 19
+    valence_shells: [ 4s1 ]
     mass: 39.0983
     charges: [ 1 ] 
     group_number: 1
@@ -192,6 +215,7 @@
 "Ca":
     name: Calcium
     protons: 20
+    valence_shells: [ 4s2 ]
     mass: 40.078
     charges: [ 2 ] 
     group_number: 2
@@ -202,6 +226,7 @@
 "Sc":
     name: Scandium
     protons: 21
+    valence_shells: [ 3d1, 4s2 ]
     mass: 44.955908
     charges: [ 3 ] 
     group_number: 3
@@ -212,6 +237,7 @@
 "Ti":
     name: Titanium
     protons: 22
+    valence_shells: [ 3d2, 4s2 ]
     mass: 47.867
     charges: [ 4 ,  3 ] 
     group_number: 4
@@ -222,6 +248,7 @@
 "V":
     name: Vanadium
     protons: 23
+    valence_shells: [ 3d3, 4s2 ]
     mass: 50.9415
     charges: [ 2 ,  3 ,  4 ,  5 ] 
     group_number: 5
@@ -232,6 +259,7 @@
 "Cr":
     name: Chromium
     protons: 24
+    valence_shells: [ 3d5, 4s1 ]
     mass: 51.9961
     charges: [ 2 ,  3 ,  6 ] 
     group_number: 6
@@ -242,6 +270,7 @@
 "Mn":
     name: Manganese
     protons: 25
+    valence_shells: [ 3d5, 4s2 ]
     mass: 54.938043
     charges: [ 2 ,  4 ,  7 ] 
     group_number: 7
@@ -252,6 +281,7 @@
 "Fe":
     name: Iron
     protons: 26
+    valence_shells: [ 3d6, 4s2 ]
     mass: 55.845
     charges: [ 2 ,  3 ] 
     group_number: 8
@@ -262,6 +292,7 @@
 "Co":
     name: Cobalt
     protons: 27
+    valence_shells: [ 3d7, 4s2 ]
     mass: 58.933194
     charges: [ 2 ,  3 ] 
     group_number: 9
@@ -272,6 +303,7 @@
 "Ni":
     name: Nickel
     protons: 28
+    valence_shells: [ 3d8, 4s2 ]
     mass: 58.6934
     charges: [ 2 ] 
     group_number: 10
@@ -282,6 +314,7 @@
 "Cu":
     name: Copper
     protons: 29
+    valence_shells: [ 3d10, 4s1 ]
     mass: 63.546
     charges: [ 1 ,  2 ] 
     group_number: 11
@@ -292,6 +325,7 @@
 "Zn":
     name: Zinc
     protons: 30
+    valence_shells: [ 3d10, 4s2 ]
     mass: 65.38
     charges: [ 2 ] 
     group_number: 12
@@ -302,6 +336,7 @@
 "Ga":
     name: Gallium
     protons: 31
+    valence_shells: [ 4s2, 4p1 ]
     mass: 69.723
     charges: [ 3 ] 
     group_number: 13
@@ -312,6 +347,7 @@
 "Ge":
     name: Germanium
     protons: 32
+    valence_shells: [ 4s2, 4p2 ]
     mass: 72.630
     charges: [ -4 ,  2 ,  4 ] 
     group_number: 14
@@ -322,6 +358,7 @@
 "As":
     name: Arsenic
     protons: 33
+    valence_shells: [ 4s2, 4p3 ]
     mass: 74.921595
     charges: [ -3 ,  3 ,  5 ] 
     group_number: 15
@@ -332,6 +369,7 @@
 "Se":
     name: Selenium
     protons: 34
+    valence_shells: [ 4s2, 4p4 ]
     mass: 78.971
     charges: [ -2 ,  4 ,  6 ] 
     group_number: 16
@@ -342,6 +380,7 @@
 "Br":
     name: Bromine
     protons: 35
+    valence_shells: [ 4s2, 4p5 ]
     mass: 79.904
     charges: [ -1 ,  1 ,  5 ] 
     group_number: 17
@@ -352,6 +391,7 @@
 "Kr":
     name: Krypton
     protons: 36
+    valence_shells: [ 4s2, 4p6 ]
     mass: 83.798
     charges: [ 0 ] 
     group_number: 18
@@ -362,6 +402,7 @@
 "Rb":
     name: Rubidium
     protons: 37
+    valence_shells: [ 5s1 ]
     mass: 85.4678
     charges: [ 1 ] 
     group_number: 1
@@ -372,6 +413,7 @@
 "Sr":
     name: Strontium
     protons: 38
+    valence_shells: [ 5s2 ]
     mass: 87.62
     charges: [ 2 ] 
     group_number: 2
@@ -382,6 +424,7 @@
 "Y":
     name: Yttrium
     protons: 39
+    valence_shells: [ 4d1, 5s2 ]
     mass: 88.90584
     charges: [ 3 ] 
     group_number: 3
@@ -392,6 +435,7 @@
 "Zr":
     name: Zirconium
     protons: 40
+    valence_shells: [ 4d2, 5s2 ]
     mass: 91.224
     charges: [ 4 ] 
     group_number: 4
@@ -402,6 +446,7 @@
 "Nb":
     name: Niobium
     protons: 41
+    valence_shells: [ 4d4, 5s1 ]
     mass: 92.90637
     charges: [ 3 ,  5 ] 
     group_number: 5
@@ -412,6 +457,7 @@
 "Mo":
     name: Molybdenum
     protons: 42
+    valence_shells: [ 4d5, 5s1 ]
     mass: 95.95
     charges: [ 3 ,  6 ] 
     group_number: 6
@@ -422,6 +468,7 @@
 "Tc":
     name: Technetium
     protons: 43
+    valence_shells: [ 4d5, 5s2 ]
     mass: null
     charges: [ 6 ] 
     group_number: 7
@@ -432,6 +479,7 @@
 "Ru":
     name: Ruthenium
     protons: 44
+    valence_shells: [ 4d7, 5s1 ]
     mass: 101.07
     charges: [ 3 ,  4 ,  8 ] 
     group_number: 8
@@ -442,6 +490,7 @@
 "Rh":
     name: Rhodium
     protons: 45
+    valence_shells: [ 4d8, 5s1 ]
     mass: 102.90549
     charges: [ 4 ] 
     group_number: 9
@@ -452,6 +501,7 @@
 "Pd":
     name: Palladium
     protons: 46
+    valence_shells: [ 4d10 ]
     mass: 106.42
     charges: [ 2 ,  4 ] 
     group_number: 10
@@ -462,6 +512,7 @@
 "Ag":
     name: Silver
     protons: 47
+    valence_shells: [ 4d10, 5s1 ]
     mass: 107.8682
     charges: [ 1 ] 
     group_number: 11
@@ -472,6 +523,7 @@
 "Cd":
     name: Cadmium
     protons: 48
+    valence_shells: [ 4d10, 5s2 ]
     mass: 112.414
     charges: [ 2 ] 
     group_number: 12
@@ -482,6 +534,7 @@
 "In":
     name: Indium
     protons: 49
+    valence_shells: [ 5s2, 5p1 ]
     mass: 114.818
     charges: [ 3 ] 
     group_number: 13
@@ -492,6 +545,7 @@
 "Sn":
     name: Tin
     protons: 50
+    valence_shells: [ 5s2, 5p2 ]
     mass: 118.710
     charges: [ 2 ,  4 ] 
     group_number: 14
@@ -502,6 +556,7 @@
 "Sb":
     name: Antimony
     protons: 51
+    valence_shells: [ 5s2, 5p3 ]
     mass: 121.760
     charges: [ -3 ,  3 ,  5 ] 
     group_number: 15
@@ -512,6 +567,7 @@
 "Te":
     name: Tellurium
     protons: 52
+    valence_shells: [ 5s2, 5p4 ]
     mass: 127.60
     charges: [ -2 ,  4 ,  6 ] 
     group_number: 16
@@ -522,6 +578,7 @@
 "I":
     name: Iodine
     protons: 53
+    valence_shells: [ 5s2, 5p5 ]
     mass: 126.90447
     charges: [ -1 ] 
     group_number: 17
@@ -532,6 +589,7 @@
 "Xe":
     name: Xenon
     protons: 54
+    valence_shells: [ 5s2, 5p6 ]
     mass: 131.293
     charges: [ 0 ] 
     group_number: 18
@@ -542,6 +600,7 @@
 "Cs":
     name: Cesium
     protons: 55
+    valence_shells: [ 6s1 ]
     mass: 132.90545196
     charges: [ 1 ] 
     group_number: 1
@@ -552,6 +611,7 @@
 "Ba":
     name: Barium
     protons: 56
+    valence_shells: [ 6s2 ]
     mass: 137.327
     charges: [ 2 ] 
     group_number: 2
@@ -562,6 +622,7 @@
 "La":
     name: Lanthanum
     protons: 57
+    valence_shells: [ 5d1, 6s2 ]
     mass: 138.90547
     charges: [ 3 ] 
     group_number: 3
@@ -572,6 +633,7 @@
 "Ce":
     name: Cerium
     protons: 58
+    valence_shells: [ 4f1, 5d1, 6s2 ]
     mass: 140.116
     charges: [ 3 ,  4 ] 
     group_number: 101
@@ -582,6 +644,7 @@
 "Pr":
     name: Praseodymium
     protons: 59
+    valence_shells: [ 4f3, 6s2 ]
     mass: 140.90766
     charges: [ 3 ] 
     group_number: 101
@@ -592,6 +655,7 @@
 "Nd":
     name: Neodymium
     protons: 60
+    valence_shells: [ 4f4, 6s2 ]
     mass: 144.242
     charges: [ 3 ,  4 ] 
     group_number: 101
@@ -602,6 +666,7 @@
 "Pm":
     name: Promethium
     protons: 61
+    valence_shells: [ 4f5, 6s2 ]
     mass: null
     charges: [ 3 ] 
     group_number: 101
@@ -612,6 +677,7 @@
 "Sm":
     name: Samarium
     protons: 62
+    valence_shells: [ 4f6, 6s2 ]
     mass: 150.36
     charges: [ 3 ] 
     group_number: 101
@@ -622,6 +688,7 @@
 "Eu":
     name: Europium
     protons: 63
+    valence_shells: [ 4f7, 6s2 ]
     mass: 151.964
     charges: [ 3 ] 
     group_number: 101
@@ -632,6 +699,7 @@
 "Gd":
     name: Gadolinium
     protons: 64
+    valence_shells: [ 4f7, 5d1, 6s2 ]
     mass: 157.25
     charges: [ 3 ] 
     group_number: 101
@@ -642,6 +710,7 @@
 "Tb":
     name: Terbium
     protons: 65
+    valence_shells: [ 4f9, 6s2 ]
     mass: 158.925354
     charges: [ 3 ,  4 ] 
     group_number: 101
@@ -652,6 +721,7 @@
 "Dy":
     name: Dysprosium
     protons: 66
+    valence_shells: [ 4f10, 6s2 ]
     mass: 162.500
     charges: [ 3 ] 
     group_number: 101
@@ -662,6 +732,7 @@
 "Ho":
     name: Holmium
     protons: 67
+    valence_shells: [ 4f11, 6s2 ]
     mass: 164.930328
     charges: [ 3 ] 
     group_number: 101
@@ -672,6 +743,7 @@
 "Er":
     name: Erbium
     protons: 68
+    valence_shells: [ 4f12, 6s2 ]
     mass: 167.259
     charges: [ 3 ] 
     group_number: 101
@@ -682,6 +754,7 @@
 "Tm":
     name: Thulium
     protons: 69
+    valence_shells: [ 4f13, 6s2 ]
     mass: 168.934218
     charges: [ 3 ] 
     group_number: 101
@@ -692,6 +765,7 @@
 "Yb":
     name: Ytterbium
     protons: 70
+    valence_shells: [ 4f14, 6s2 ]
     mass: 173.045
     charges: [ 3 ] 
     group_number: 101
@@ -702,6 +776,7 @@
 "Lu":
     name: Lutetium
     protons: 71
+    valence_shells: [ 5d1, 6s2 ]
     mass: 174.9668
     charges: [ 3 ] 
     group_number: 101
@@ -712,6 +787,7 @@
 "Hf":
     name: Hafnium
     protons: 72
+    valence_shells: [ 5d2, 6s2 ]
     mass: 178.49
     charges: [ 4 ] 
     group_number: 4
@@ -722,6 +798,7 @@
 "Ta":
     name: Tantalum
     protons: 73
+    valence_shells: [ 5d3, 6s2 ]
     mass: 180.94788
     charges: [ 5 ] 
     group_number: 5
@@ -732,6 +809,7 @@
 "W":
     name: Tungsten
     protons: 74
+    valence_shells: [ 5d4, 6s2 ]
     mass: 183.84
     charges: [ 6 ] 
     group_number: 6
@@ -742,6 +820,7 @@
 "Re":
     name: Rhenium
     protons: 75
+    valence_shells: [ 5d5, 6s2 ]
     mass: 186.207
     charges: [ 2 ,  4 ,  6 ,  7 ] 
     group_number: 7
@@ -752,6 +831,7 @@
 "Os":
     name: Osmium
     protons: 76
+    valence_shells: [ 5d6, 6s2 ]
     mass: 190.23
     charges: [ 3 ,  4 ,  6 ,  8 ] 
     group_number: 8
@@ -762,6 +842,7 @@
 "Ir":
     name: Iridium
     protons: 77
+    valence_shells: [ 5d7, 6s2 ]
     mass: 192.217
     charges: [ 3 ,  4 ,  6 ] 
     group_number: 9
@@ -772,6 +853,7 @@
 "Pt":
     name: Platinum
     protons: 78
+    valence_shells: [ 5d9, 6s1 ]
     mass: 195.084
     charges: [ 2 ,  4 ,  6 ] 
     group_number: 10
@@ -782,6 +864,7 @@
 "Au":
     name: Gold
     protons: 79
+    valence_shells: [ 5d10, 6s1 ]
     mass: 196.966570
     charges: [ 1 ,  2 ,  3 ] 
     group_number: 11
@@ -792,6 +875,7 @@
 "Hg":
     name: Mercury
     protons: 80
+    valence_shells: [ 5d10, 6s2 ]
     mass: 200.592
     charges: [ 1 ,  2 ] 
     group_number: 12
@@ -802,6 +886,7 @@
 "Tl":
     name: Thallium
     protons: 81
+    valence_shells: [ 6s2, 6p1 ]
     mass: 204.38
     charges: [ 1 ,  3 ] 
     group_number: 13
@@ -812,6 +897,7 @@
 "Pb":
     name: Lead
     protons: 82
+    valence_shells: [ 6s2, 6p2 ]
     mass: 207.2
     charges: [ 2 ,  4 ] 
     group_number: 14
@@ -822,6 +908,7 @@
 "Bi":
     name: Bismuth
     protons: 83
+    valence_shells: [ 6s2, 6p3 ]
     mass: 208.98040
     charges: [ 3 ] 
     group_number: 15
@@ -832,6 +919,7 @@
 "Po":
     name: Polonium
     protons: 84
+    valence_shells: [ 6s2, 6p4 ]
     mass: null
     charges: [ 2 ,  4 ] 
     group_number: 16
@@ -842,6 +930,7 @@
 "At":
     name: Astatine
     protons: 85
+    valence_shells: [ 6s2, 6p5 ]
     mass: null
     charges: null 
     group_number: 17
@@ -852,6 +941,7 @@
 "Rn":
     name: Radon
     protons: 86
+    valence_shells: [ 6s2, 6p6 ]
     mass: null
     charges: [ 0 ] 
     group_number: 18
@@ -862,6 +952,7 @@
 "Fr":
     name: Francium
     protons: 87
+    valence_shells: [ 7s1 ]
     mass: null
     charges: null 
     group_number: 1
@@ -872,6 +963,7 @@
 "Ra":
     name: Radium
     protons: 88
+    valence_shells: [ 7s2 ]
     mass: null
     charges: [ 2 ] 
     group_number: 2
@@ -882,6 +974,7 @@
 "Ac":
     name: Actinium
     protons: 89
+    valence_shells: [ 6d1, 7s2 ]
     mass: null
     charges: [ 3 ] 
     group_number: 3
@@ -892,6 +985,7 @@
 "Th":
     name: Thorium
     protons: 90
+    valence_shells: [ 6d2, 7s2 ]
     mass: 232.0377
     charges: [ 4 ] 
     group_number: 102
@@ -902,6 +996,7 @@
 "Pa":
     name: Protactinium
     protons: 91
+    valence_shells: [ 5f2, 6d1, 7s2 ]
     mass: 231.03588
     charges: [ 5 ] 
     group_number: 102
@@ -912,6 +1007,7 @@
 "U":
     name: Uranium
     protons: 92
+    valence_shells: [ 5f3, 6d1, 7s2 ]
     mass: 238.02891
     charges: [ 3 ,  4 ,  6 ] 
     group_number: 102
@@ -922,6 +1018,7 @@
 "Np":
     name: Neptunium
     protons: 93
+    valence_shells: [ 5f4, 6d1, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -932,6 +1029,7 @@
 "Pu":
     name: Plutonium
     protons: 94
+    valence_shells: [ 5f6, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -942,6 +1040,7 @@
 "Am":
     name: Americium
     protons: 95
+    valence_shells: [ 5f7, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -952,6 +1051,7 @@
 "Cm":
     name: Curium
     protons: 96
+    valence_shells: [ 5f7, 6d1, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -962,6 +1062,7 @@
 "Bk":
     name: Berkelium
     protons: 97
+    valence_shells: [ 5f9, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -972,6 +1073,7 @@
 "Cf":
     name: Californium
     protons: 98
+    valence_shells: [ 5f10, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -982,6 +1084,7 @@
 "Es":
     name: Einsteinium
     protons: 99
+    valence_shells: [ 5f11, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -992,6 +1095,7 @@
 "Fm":
     name: Fermium
     protons: 100
+    valence_shells: [ 5f12, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -1002,6 +1106,7 @@
 "Md":
     name: Mendelevium
     protons: 101
+    valence_shells: [ 5f13, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -1012,6 +1117,7 @@
 "No":
     name: Nobelium
     protons: 102
+    valence_shells: [ 5f14, 7s2 ]
     mass: null
     charges: null 
     group_number: 102
@@ -1022,6 +1128,7 @@
 "Lr":
     name: Lawrencium
     protons: 103
+    valence_shells: [ 7s2, 7p1 ]
     mass: null
     charges: null 
     group_number: 102
@@ -1032,6 +1139,7 @@
 "Rf":
     name: Rutherfordium
     protons: 104
+    valence_shells: [ 6d2, 7s2 ]
     mass: null
     charges: null 
     group_number: 4
@@ -1042,6 +1150,7 @@
 "Db":
     name: Dubnium
     protons: 105
+    valence_shells: [ 6d3, 7s2 ]
     mass: null
     charges: null 
     group_number: 5
@@ -1052,6 +1161,7 @@
 "Sg":
     name: Seaborgium
     protons: 106
+    valence_shells: [ 6d4, 7s2 ]
     mass: null
     charges: null 
     group_number: 6
@@ -1062,6 +1172,7 @@
 "Bh":
     name: Bohrium
     protons: 107
+    valence_shells: [ 6d5, 7s2 ]
     mass: null
     charges: null 
     group_number: 7
@@ -1072,6 +1183,7 @@
 "Hs":
     name: Hassium
     protons: 108
+    valence_shells: [ 6d6, 7s2 ]
     mass: null
     charges: null 
     group_number: 8
@@ -1082,6 +1194,7 @@
 "Mt":
     name: Meitnerium
     protons: 109
+    valence_shells: [ 6d7, 7s2 ]
     mass: null
     charges: null 
     group_number: 9
